# chessy

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.qml
src/GUI/: CMakeLists.txt  ContextProvider.cpp  ContextProvider.h  GnuChessEngine.cpp  GnuChessEngine.h  main.cpp  pch.h  qml.qrc
src/GUI/QML/: Board.qml  Constants.js  main.qml
src/cmake/: 3rd_party.cmake  config.cmake
